# alea-web-survey

./: .env.template  .pre-commit-config.yaml  README.md  config.json  pyproject.toml
alea_web_survey/: __init__.py  cli.py  config.py  logger.py
alea_web_survey/collection/dns/: __init__.py  domain_generator.py
alea_web_survey/collection/http/: __init__.py  web_client.py
alea_web_survey/models/: web_resource.py
alea_web_survey/storage/: s3.py
alea_web_survey/tasks/: collect_web.py  collect_web_parallel.py  get_resource.py  push_s3.py
docker/: Dockerfile  run.sh
resources/: NOTICE.md
scripts/: generate_domain_trie.py
tests/: test_web_resource.py
